--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,54 @@
-version: "3.9"
+version: "3.7"
 volumes:
-    db:
-      driver:
-        local
+  db:
+    driver:
+      local
 services:
-    app:
-        build:
-            context: ./
-            dockerfile: Dockerfile
-        image: laravel-app
-        container_name: laravel-app
-        restart: unless-stopped
-        working_dir: /var/www/
-        volumes:
-            - ./:/var/www
-        networks:
-            - laravel-network
+  #PHP Service
+  app:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    image: laravel-app
+    container_name: laravel-app
+    restart: unless-stopped
+    working_dir: /var/www/
+    volumes:
+      - ./:/var/www
+    networks:
+      - laravel-network
 
-    db:
-        image: mysql:8.0.22
-        restart: unless-stopped
-        environment:
-            MYSQL_DATABASE: laravel-db
-            MYSQL_ROOT_PASSWORD: root
-            MYSQL_PASSWORD: root
-            MYSQL_USER: root
-        ports:
-            - "3306:3306"
-        volumes:
-            - ./data:/docker-entrypoint-initdb.d
-            - db:/var/lib/mysql
-        networks:
-            - laravel-network
+  #MySQL Service
+  db:
+    image: mysql:8.0.22
+    restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: laravel-db
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_PASSWORD: root
+      MYSQL_USER: root
+    ports:
+      - "3306:3306"
+    volumes:
+      - ./data:/docker-entrypoint-initdb.d
+      - db:/var/lib/mysql
+    networks:
+      - laravel-network
 
-    nginx:
-        image: nginx:alpine
-        container_name: laravel-nginx
-        restart: unless-stopped
-        ports:
-            - 443:80
-        volumes:
-            - ./:/var/www
-            - ./touch.conf:/etc/nginx/conf.d/default.conf
-        networks:
-            - laravel-network
+  #Nginx Service
+  nginx:
+    image: nginx:alpine
+    container_name: laravel-nginx
+    restart: unless-stopped
+    ports:
+      - 443:80
+    volumes:
+      - ./:/var/www
+      - ./touch.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - laravel-network
 
+#Docker Networks
 networks:
-    laravel-network:
-        driver: bridge
+  laravel-network:
+    driver: bridge
